        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=15989
        XPath queries with predicates incorrectly retains the current node across unions

        Test: fast/xpath/union-context-node.xhtml

        * xml/XPathPath.cpp:
        (WebCore::XPath::LocationPath::evaluate): Restore context after evaluation.
        * xml/XPathStep.cpp:
        (WebCore::XPath::Step::evaluate): Do not backup context, as we can easily re-create it.



Canonical link: https://commits.webkit.org/21757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27837 268f45cc-cd09-0410-ab3c-d52691b4dbfc